recursion.lessons.recursion.tree.Tree.scala.error
Tree:23: error: not found: value x
		setPos(x, y);
                       ^Tree:24: error: not found: value cap
		setCap(cap);
                       ^Tree:28: error: not found: value longueur
		tree(steps-1, longueur, angle, shrink);
                              ^